--- a/maven/webapps/.settings/org.eclipse.wst.common.component
+++ b/maven/webapps/.settings/org.eclipse.wst.common.component
@@ -21,6 +21,9 @@
         <dependent-module archiveName="entity-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/entity/entity">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="context-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/context/context">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="webapps"/>
         <property name="java-output-path" value="/webapps/target/classes"/>
     </wb-module>
